# tailyew

daisyui/: Cargo.toml
daisyui/src/: drawer.rs  tooltip.rs
demo/: Cargo.toml  Trunk.toml
demo/src/: home.rs  main.rs
demo/src/daisyui_demo/: route.rs
demo/src/hero_icons_demo/: route.rs
demo_components/: Cargo.toml
docs/: demo-457bb88418be19f.js  demo-457bb88418be19f_bg.wasm  index.html
docs/.stage/: output-bcd462a0e099346c.css
hero_icons/: Cargo.toml
