[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew = { version = "0.20.0", features = ["csr"] }
# yew-router = { git = "https://github.com/yewstack/yew.git" }
yew-router = "0.17"
gloo = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde", "wasmbind"] }
daisyui = { path = "../daisyui" }
hero_icons = { path = "../hero_icons" }
demo_components = {path = "../demo_components"}
wasm-bindgen = "0.2"
